# qwen-image-macos

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_OLD.md  README_SIMPLE.md  RELEASE_NOTES_v1.0.md  cog.yaml  environment.yml  install.py  predict.py  pyproject.toml  qwen.py  requirements.cog.txt  requirements.txt  simple_qwen.py  test_comprehensive.py  test_final.py
docs/: FAST_EDIT_GGUF.md
qwen_image_edit/: __init__.py
qwen_image_edit/cli/: __init__.py  main.py
qwen_image_edit/core/: __init__.py  config.py  pipeline.py
qwen_image_edit/utils/: __init__.py  prompts.py
scripts/: build_workflow.py  comfy_submit.py  edit.sh  fetch_gguf.py  generate.sh  setup_gguf.sh
tests/: __init__.py  test_basic.py  test_drag_drop.py
